// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge Component matches danger 1`] = `
.c0 {
  display: inline-block;
  font-size: 75%;
  font-weight: 700;
  line-height: 1;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  position: relative;
  top: -1px;
  border-radius: 0.25rem;
  padding: 0.25rem 0.4rem;
  color: #fff;
  background-color: #dc3545;
}

.c0:empty {
  display: none;
}

.c0 > a {
  color: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #dc3545;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<span
  class="sc-fzokOt c0"
/>
`;

exports[`Badge Component matches dark 1`] = `
.c0 {
  display: inline-block;
  font-size: 75%;
  font-weight: 700;
  line-height: 1;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  position: relative;
  top: -1px;
  border-radius: 0.25rem;
  padding: 0.25rem 0.4rem;
  color: #fff;
  background-color: #343a40;
}

.c0:empty {
  display: none;
}

.c0 > a {
  color: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #343a40;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<span
  class="sc-fzokOt c0"
/>
`;

exports[`Badge Component matches info 1`] = `
.c0 {
  display: inline-block;
  font-size: 75%;
  font-weight: 700;
  line-height: 1;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  position: relative;
  top: -1px;
  border-radius: 0.25rem;
  padding: 0.25rem 0.4rem;
  color: #fff;
  background-color: #17a2b8;
}

.c0:empty {
  display: none;
}

.c0 > a {
  color: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #17a2b8;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<span
  class="sc-fzokOt c0"
/>
`;

exports[`Badge Component matches light 1`] = `
.c0 {
  display: inline-block;
  font-size: 75%;
  font-weight: 700;
  line-height: 1;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  position: relative;
  top: -1px;
  border-radius: 0.25rem;
  padding: 0.25rem 0.4rem;
  color: #2d2f31;
  background-color: #f0f0f0;
}

.c0:empty {
  display: none;
}

.c0 > a {
  color: #2d2f31;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #f0f0f0;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<span
  class="sc-fzokOt c0"
/>
`;

exports[`Badge Component matches plain 1`] = `
.c0 {
  display: inline-block;
  font-size: 75%;
  font-weight: 700;
  line-height: 1;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  position: relative;
  top: -1px;
  border-radius: 0.25rem;
  padding: 0.25rem 0.4rem;
  color: #fff;
  background-color: #6c757d;
}

.c0:empty {
  display: none;
}

.c0 > a {
  color: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6c757d;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<span
  class="sc-fzokOt c0"
/>
`;

exports[`Badge Component matches primary 1`] = `
.c0 {
  display: inline-block;
  font-size: 75%;
  font-weight: 700;
  line-height: 1;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  position: relative;
  top: -1px;
  border-radius: 0.25rem;
  padding: 0.25rem 0.4rem;
  color: #fff;
  background-color: #007bff;
}

.c0:empty {
  display: none;
}

.c0 > a {
  color: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #007bff;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<span
  class="sc-fzokOt c0"
/>
`;

exports[`Badge Component matches secondary 1`] = `
.c0 {
  display: inline-block;
  font-size: 75%;
  font-weight: 700;
  line-height: 1;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  position: relative;
  top: -1px;
  border-radius: 0.25rem;
  padding: 0.25rem 0.4rem;
  color: #fff;
  background-color: #6c757d;
}

.c0:empty {
  display: none;
}

.c0 > a {
  color: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #6c757d;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<span
  class="sc-fzokOt c0"
/>
`;

exports[`Badge Component matches success 1`] = `
.c0 {
  display: inline-block;
  font-size: 75%;
  font-weight: 700;
  line-height: 1;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  position: relative;
  top: -1px;
  border-radius: 0.25rem;
  padding: 0.25rem 0.4rem;
  color: #fff;
  background-color: #28a745;
}

.c0:empty {
  display: none;
}

.c0 > a {
  color: #fff;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #28a745;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<span
  class="sc-fzokOt c0"
/>
`;

exports[`Badge Component matches warning 1`] = `
.c0 {
  display: inline-block;
  font-size: 75%;
  font-weight: 700;
  line-height: 1;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  position: relative;
  top: -1px;
  border-radius: 0.25rem;
  padding: 0.25rem 0.4rem;
  color: #2d2f31;
  background-color: #ffc107;
}

.c0:empty {
  display: none;
}

.c0 > a {
  color: #2d2f31;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #ffc107;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<span
  class="sc-fzokOt c0"
/>
`;
